@@ -7,6 +7,7 @@
 		 "id":12345,   
 	 	 "in_reply_to_status_id" : 123123123123,
 	 	 "favorited" : true,
+		"favorite_count" : 1001,
 	 	 "user" : {
 		      "id" : 112233,
 		      "screen_name" : "habuma",
