@@ -13,6 +13,7 @@
 	"created_at" : "Tue Jul 13 17:38:21 +0000 2010",
 	"retweeted" : true,
 	"favorited" : true,
+	"favorite_count" : 1001,
 	"entities": {
 		"hashtags": [
 		{
